[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/ButtonTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -98.0
margin_right = 154.0
margin_bottom = 540.0

[node name="NewGame" parent="VBoxContainer" instance=ExtResource( 1 )]

[node name="Options" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 80.0
margin_bottom = 156.0
text = "Options"

[node name="Exit" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 160.0
margin_bottom = 236.0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
